--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -4,9 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.liley.hummer</groupId>
+    <parent>
+        <groupId>cn.liley.hummer</groupId>
+        <artifactId>hummer</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <artifactId>launcher</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
 
@@ -38,7 +41,7 @@
         <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-junit3</artifactId>
-            <version>2.10</version>
+            <version>2.18.1</version>
         </dependency>
 
         <dependency>
