--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>launcher</module>
         <module>rest-api</module>
+        <module>wfcli</module>
     </modules>
 <!--
     <build>
