--- a/conf/log.properties
+++ b/conf/log.properties
@@ -7,7 +7,7 @@ java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.level=FINEST
 .level=FINEST
 # 指定要使用的 Formatter 类的名称（默认为 java.util.logging.XMLFormatter）。
-java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.formatter=cn.liley.hummer.utils.logging.MessageFormatter
 # 指定要写入到任意文件的近似最大量（以字节为单位）。如果该数为 0，则没有限制（默认为无限制）。
 java.util.logging.FileHandler.limit=10240000
 # 指定有多少输出文件参与循环（默认为 1）。
