--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -14,14 +14,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.2</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -44,7 +40,7 @@
                         <phase>compile</phase>
                         <configuration>
                             <target>
-                                <copy tofile="../www/webapps/${artifactId}.war" file="${build.directory}/${build.finalName}.war">
+                                <copy tofile="../www/webapps/${project.artifactId}.war" file="${project.build.directory}/${project.build.finalName}.war">
                                 </copy>
                             </target>
                         </configuration>
