--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -19,6 +19,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
