--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.nutz</groupId>
+            <artifactId>nutz</artifactId>
+            <version>1.b.52</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
@@ -37,7 +42,7 @@
                 <executions>
                     <execution>
                         <id>copy</id>
-                        <phase>compile</phase>
+                        <phase>package</phase>
                         <configuration>
                             <target>
                                 <copy tofile="../www/webapps/${project.artifactId}.war" file="${project.build.directory}/${project.build.finalName}.war">
