completed the command 'showstatus' server side.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>rest-api</module>
         <module>wfcli</module>
         <module>utils</module>
+        <module>engine-core</module>
     </modules>
 <!--
     <build>
