--- a/wfcli/pom.xml
+++ b/wfcli/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.nutz</groupId>
+            <artifactId>nutz</artifactId>
+            <version>1.b.52</version>
+        </dependency>
+        <dependency>
             <groupId>cn.liley.hummer</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
